--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.46.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.8",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@auth/sveltekit": "^1.7.3"
 	}
 }
